traces/bug_224.txt
examples++-load/Element_PkEdge.cpp:190: error: DEAD_STORE
  The value written to &n (type int) is never used.
Showing all 1 steps of the trace


examples++-load/Element_PkEdge.cpp:190:21: Write of unused value
188.                   {
189.                       int e= df/npe;
190.                       int n= df%npe;
                           ^
191.                       Data[o[0]+df]= 6; // 3+e;
192.                       Data[o[1]+df]=df ;
